GOWL-03: Created new Leagues library and service.